--- a/README
+++ b/README
@@ -9,7 +9,9 @@ Aquest projecte és la meva primera demo a GitHub
 ## Contribuïdors
 
 ## Contacte
-**Andrea** - ***21avalverde@ibadia.cat***
+**Andrea Valverde** - ***21avalverde@ibadia.cat***
 
 Enllaç del projecte:
-[https://github.com/TuMamaPuta/Pochim](https://github.com/TuMamaPuta/Pochim)
+[https://github.com/TuMamaPuta/Pochim.git](https://github.com/TuMamaPuta/Pochim.git)
+
+
