--- a/README
+++ b/README
@@ -1,17 +1,18 @@
 [[_TOC_]]
 
-# CFGS DAW M0487
+# Pochimon Project
+
+![Pochimon](images.jpeg)
 
 ## Sobre el projecte
 
-Aquest projecte és la meva primera demo a GitHub
-
-## Contribuïdors
+Aquest projecte és una implementació de *Pochimon*.
 
 ## Contacte
 **Andrea Valverde** - ***21avalverde@ibadia.cat***
 
 Enllaç del projecte:
 [https://github.com/TuMamaPuta/Pochim.git](https://github.com/TuMamaPuta/Pochim.git)
+
 
 
